# pybench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  dev.py  pyproject.toml
.pybench/: baselines.jsonl
docs/: api.md  cli.md  conf.py  getting_started.md  how_it_works.md  index.md  mnist.md  synthetic.md  user_guide.md
docs/plots/: regimes.py  sampler.py
examples/mnist/: README.md  pyproject.toml
examples/mnist/.pybench/: baselines.jsonl
examples/mnist/benchmarks/: bench_model.py
examples/mnist/src/mnist/: __init__.py  data.py  model.py  train.py
examples/synthetic/: README.md  main.py  pyproject.toml
examples/synthetic/benchmarks/: bench_synthetic.py
examples/synthetic/src/synthetic/: __init__.py  curves.py
src/pybench/: __init__.py  cli.py  config.py  discovery.py  git.py  normalizer.py  reporter.py  runner.py  stats.py  store.py  validator.py
tests/: test_cli.py  test_config.py  test_discovery.py  test_git.py  test_normalizer.py  test_reporter.py  test_runner.py  test_stats.py  test_store.py  test_validator.py
